Tournaments display functionnal

--- a/BinaryProjectGit/properties/prod.properties
+++ b/BinaryProjectGit/properties/prod.properties
@@ -19,3 +19,9 @@ password=root
 
 getUserByEmail=SELECT * FROM binaryProjectDB.users WHERE email = ?;
 insertNewUser=INSERT INTO binaryProjectDB.users VALUES (DEFAULT,?,?,?,?,0);
+
+
+#TournamentDao queries
+
+get24hTournaments=SELECT T.* FROM Tournaments T WHERE T.starting_date > NOW() AND T.starting_date < NOW() + INTERVAL 1 DAY ORDER BY T.starting_date;
+getRegisteredPlayers= SELECT UT.user_id, UT.tournament_id FROM UsersTournaments UT
