Long time no see...

--- a/BinaryProjectGit/properties/prod.properties
+++ b/BinaryProjectGit/properties/prod.properties
@@ -23,6 +23,15 @@ insertNewUser=INSERT INTO binaryProjectDB.users VALUES (DEFAULT,?,?,?,?,0);
 
 #TournamentDao queries
 
-get24hTournaments=SELECT T.* FROM Tournaments T WHERE T.starting_date > NOW() AND T.starting_date < NOW() + INTERVAL 1 DAY ORDER BY T.starting_date;
+get24hTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND T.starting_date < NOW() + INTERVAL 1 DAY ORDER BY T.starting_date;
+getWeeklyTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND T.starting_date < NOW() + INTERVAL 1 WEEK ORDER BY T.starting_date;
 getRegisteredPlayers=SELECT UT.user_id, UT.tournament_id FROM UsersTournaments UT
 registerPlayer=INSERT INTO UsersTournaments VALUES (?,?);
+addTournament=INSERT INTO Tournaments VALUES (DEFAULT,?,?,?,?,?,DEFAULT,?,?);
+deleteTournament=UPDATE Tournaments SET ending_date = NOW(), state = 'c' WHERE tournament_id = ?;
+
+
+
+#DistributionDao queries
+
+getDistributions=SELECT * FROM Distributions;
