Tournaments frontend ready except for RANKING Let's get that trading engine ready

--- a/BinaryProjectGit/properties/prod.properties
+++ b/BinaryProjectGit/properties/prod.properties
@@ -1,8 +1,10 @@
 #Config server
-port_number=8080
+port_number=8282
 
 #Config jwt
 jwt_secret=bouuuh
+
+tokenBinaryCom=HUg0FYozSmcBr5S
 
 #####################################################################################
 
@@ -23,8 +25,8 @@ insertNewUser=INSERT INTO binaryProjectDB.users VALUES (DEFAULT,?,?,?,?,0);
 
 #TournamentDao queries
 
-get24hTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND T.starting_date < NOW() + INTERVAL 1 DAY ORDER BY T.starting_date;
-getWeeklyTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND T.starting_date < NOW() + INTERVAL 1 WEEK ORDER BY T.starting_date;
+get24hTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 2 DAY) AND (T.ending_date > NOW()) ORDER BY T.starting_date;
+getWeeklyTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 1 WEEK) AND (T.ending_date > NOW()) ORDER BY T.starting_date;
 getRegisteredPlayers=SELECT UT.user_id, UT.tournament_id FROM UsersTournaments UT
 registerPlayer=INSERT INTO UsersTournaments VALUES (?,?);
 addTournament=INSERT INTO Tournaments VALUES (DEFAULT,?,?,?,?,?,DEFAULT,?,?);
