Trading engine 90% ready

--- a/BinaryProjectGit/properties/prod.properties
+++ b/BinaryProjectGit/properties/prod.properties
@@ -28,7 +28,7 @@ insertNewUser=INSERT INTO binaryProjectDB.users VALUES (DEFAULT,?,?,?,?,0);
 get24hTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 2 DAY) AND (T.ending_date > NOW()) ORDER BY T.starting_date;
 getWeeklyTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 1 WEEK) AND (T.ending_date > NOW()) ORDER BY T.starting_date;
 getRegisteredPlayers=SELECT UT.user_id, UT.tournament_id FROM UsersTournaments UT
-registerPlayer=INSERT INTO UsersTournaments VALUES (?,?);
+registerPlayer=INSERT INTO UsersTournaments VALUES (?,?,?);
 addTournament=INSERT INTO Tournaments VALUES (DEFAULT,?,?,?,?,?,DEFAULT,?,?);
 deleteTournament=UPDATE Tournaments SET ending_date = NOW(), state = 'c' WHERE tournament_id = ?;
 
@@ -37,3 +37,17 @@ deleteTournament=UPDATE Tournaments SET ending_date = NOW(), state = 'c' WHERE t
 #DistributionDao queries
 
 getDistributions=SELECT * FROM Distributions;
+
+
+#TradeDao queries
+
+newTrade=INSERT INTO Trades VALUES (DEFAULT, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+updateBalance=UPDATE UsersTournaments SET tournamentBalance = tournamentBalance + ?  WHERE tournament_id = ? AND user_id = ?;
+executeTrade=UPDATE Trades SET ending_price=?, state=? WHERE trade_id=?;
+
+#Trade Win Rate
+winRate=0.5
+
+
+#Price Api Url (must add a pair -> e.g: 'EURUSD')
+priceApiUrl=https://financialmodelingprep.com/api/v3/forex/
