Tournament engine working

--- a/BinaryProjectGit/properties/prod.properties
+++ b/BinaryProjectGit/properties/prod.properties
@@ -20,23 +20,28 @@ password=root
 #UserDao queries
 
 getUserByEmail=SELECT * FROM binaryProjectDB.users WHERE email = ?;
-insertNewUser=INSERT INTO binaryProjectDB.users VALUES (DEFAULT,?,?,?,?,0);
+insertNewUser=INSERT INTO binaryProjectDB.users VALUES (DEFAULT,?,?,?,?,0,DEFAULT);
+updateUserBalance=UPDATE Users SET balance=? WHERE user_id=?;
+giveCashPrize=UPDATE Users SET balance = balance + ? WHERE user_id=?;
 
 
 #TournamentDao queries
 
-get24hTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 2 DAY) AND (T.ending_date > NOW()) ORDER BY T.starting_date;
-getWeeklyTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 1 WEEK) AND (T.ending_date > NOW()) ORDER BY T.starting_date;
+get24hTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 2 DAY) AND (T.ending_date > NOW()) ORDER BY DAY(T.starting_date), T.ending_date;
+getWeeklyTournaments=SELECT T.* FROM Tournaments T WHERE (T.state='r' OR T.state='o') AND (T.starting_date < NOW() + INTERVAL 1 WEEK) AND (T.ending_date > NOW()) ORDER BY DAY(T.starting_date), T.ending_date;
 getRegisteredPlayers=SELECT UT.user_id, UT.tournament_id FROM UsersTournaments UT
 registerPlayer=INSERT INTO UsersTournaments VALUES (?,?,?);
 addTournament=INSERT INTO Tournaments VALUES (DEFAULT,?,?,?,?,?,DEFAULT,?,?);
 deleteTournament=UPDATE Tournaments SET ending_date = NOW(), state = 'c' WHERE tournament_id = ?;
-
+getRanking=SELECT U.username, UT.* FROM Users U, UsersTournaments UT WHERE U.user_id = UT.user_id AND tournament_id = ?;
+finishTournament=UPDATE Tournaments SET state = 'f' WHERE tournament_id = ?;
+getUserTournamentBalance=SELECT tournamentBalance FROM UsersTournaments WHERE tournament_id=? AND user_id=?;
 
 
 #DistributionDao queries
 
 getDistributions=SELECT * FROM Distributions;
+getDistributionById=SELECT * FROM Distributions WHERE distribution_id=?;
 
 
 #TradeDao queries
@@ -48,6 +53,8 @@ executeTrade=UPDATE Trades SET ending_price=?, state=? WHERE trade_id=?;
 #Trade Win Rate
 winRate=0.5
 
+#Tournament Prize Ratio
+tournamentRatio=0.8
 
 #Price Api Url (must add a pair -> e.g: 'EURUSD')
 priceApiUrl=https://financialmodelingprep.com/api/v3/forex/
