Trade history & Open trades + css ranking

--- a/BinaryProjectGit/properties/prod.properties
+++ b/BinaryProjectGit/properties/prod.properties
@@ -49,9 +49,13 @@ getDistributionById=SELECT * FROM Distributions WHERE distribution_id=?;
 newTrade=INSERT INTO Trades VALUES (DEFAULT, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
 updateBalance=UPDATE UsersTournaments SET tournamentBalance = tournamentBalance + ?  WHERE tournament_id = ? AND user_id = ?;
 executeTrade=UPDATE Trades SET ending_price=?, state=? WHERE trade_id=?;
+tournamentOpenTrades=SELECT * FROM Trades WHERE user_id = ? AND tournament_id = ? AND starting_date < NOW() AND ending_date > NOW() ORDER BY starting_date DESC;
+tournamentHistoryTrades=SELECT * FROM Trades WHERE user_id = ? AND tournament_id = ? AND starting_date < NOW() AND ending_date < NOW() ORDER BY starting_date DESC;
+getTournamentUserCount=SELECT COUNT(*) FROM Trades WHERE user_id = ? AND tournament_id = ?;
+
 
 #Trade Win Rate
-winRate=0.5
+winRate=0.75
 
 #Tournament Prize Ratio
 tournamentRatio=0.8
